# drf-base64-filename

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  deploy.py  pyproject.toml  pytest.ini  requirements.txt  setup.py
drf_base64/: __init__.py  fields.py  inspectors.py
src/drf_base64/: fields.py  inspectors.py
test_project/: drf_base64  pyproject.toml  requirements.txt
test_project/config/: asgi.py  doc.py  settings.py  urls.py
test_project/sample/: apis.py  models.py  serializers.py  tests.py  urls.py
test_project/sample/migrations/: 0001_initial.py
test_project/sample/static/drf_base64/image/: sample_jpg.txt  sample_png.txt
