[project]
name = "drf-base64-filename"
version = "1.0.4"
authors = [{ name = "lhy", email = "dev@lhy.kr" }]
description = "drf-base64-filename provides Serializer fields for using base64-encoded files with file names."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
classifiers = [
    "Framework :: Django",
    "Framework :: Django :: 3.2",
    "Programming Language :: Python",
]

[project.urls]
"GitHub" = "https://github.com/LeeHanYeong/drf-base64-filename"

[tool.setuptools.packages.find]
where = ["src"]
include = ["drf_base64"]  # alternatively: `exclude = ["additional*"]`
namespaces = false

[build-system]
requires = ["poetry-core>=1.0.0", "setuptools>=61.0"]
build-backend = "setuptools.build_meta"
