[tool.poetry]
name = "drf-base64"
version = "0.1.0"
description = ""
authors = ["lhy <dev@lhy.kr>"]

[tool.poetry.dependencies]
python = "^3.10"
django = "^3.2"
django-extensions = "^3.2.0"
drf-yasg = "^1.21.3"
djangorestframework = "^3.13.1"
djangorestframework-camel-case = "^1.3.0"
django-extra-fields = "^3.0.2"
drf-writable-nested = "^0.6.4"
pillow = "^9.2.0"
model_bakery = "^1.6.0"

pytest = "^7.1.2"
pytest-django = "^4.5.2"
model-bakery = "^1.6.0"
Pillow = "^9.2.0"
psycopg2-binary = "^2.9.3"

[tool.poetry.dev-dependencies]
build = "^0.8.0"
twine = "^4.0.1"
setuptools = "^63.2.0"
wheel = "^0.37.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
